manifests/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dumbkv
spec:
  selector:
    app: dumbkv
  ports:
    - port: 80
      targetPort: 8000
